# Ros2-MMR

car_gazebo_plugin/: CMakeLists.txt
gazebo_world/: CMakeLists.txt  package.xml
report/: MMRROS2_FinalReport_THIJSCOLBERS_1659068.docx
smart_car/: CMakeLists.txt  package.xml
smart_car/config/: ekf.yaml  nav2_params.yaml
smart_car/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py  smartcar.launch.py
smart_car/rviz/: urdf_config.rviz
smart_car/script/: joint_state_publisher.py  wheel_odometry_node.py
smart_car/src/: smart_car_node.cpp
smart_car/urdf/: smartcar.urdf  smartcar.urdf.xacro
smartcar_msgs/: CMakeLists.txt  package.xml
smartcar_msgs/msg/: Status.msg
