<?xml version="1.0"?>
<package format="2">
  <name>gazebo_world</name>
  <version>0.0.1</version>
  <description>Gazebo world package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

